--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -19,7 +19,7 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="cell-sm-8">
-            <img class="img-responsive" src="images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo">
+            <img class="img-fluid" src="images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo">
         </div>
     </div>
     <div class="row justify-content-center">
