--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -17,6 +17,15 @@
 
 </nav>
 <div class="container">
+    <div class="row">
+        <div class="col-12">
+            <div class="text-center">
+                <div class="spinner-border text-primary hidden" role="status" id="spinner">
+                    <span class="sr-only">Loading...</span>
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row justify-content-center">
         <div class="cell-sm-8">
             <img class="img-fluid" src="images/OSHealthRec-LogoForLogin.png" alt="OSHealthRec Logo">
@@ -24,7 +33,7 @@
     </div>
     <div class="row justify-content-center">
         <div class="cell-sm-6">
-            <button class="btn btn-secondary mt-3" type="submit" onclick="window.location.href='https://34.67.49.75:3000/auth/github'"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
+            <button class="btn btn-secondary mt-3" id="github" type="submit" onclick="window.location.href='https://34.67.49.75:3000/auth/github'"><img src="images/GitHub-Mark-32px.png" alt="Github Logo"> Mit Github anmelden</button>
         </div>
     </div>
 </div>
@@ -39,29 +48,37 @@
 
 <script>
     $(document).ready(async function () {
-        // Ping Aufruf, um als Antwort den aufrufenden Participant zu erhalten
-        const response = await fetch(serverIp + "/api/system/ping", {
-            method: 'GET',
-            credentials: 'include'
-        });
-        let participantJson = await response.json();
-        let participantPath = participantJson.participant;
+        let loggedIn = searchParams.get('loggedIn');
+        $('github').attr("disabled", true);
 
-        // Hole Typ und Id des Participants aus dem gesamten Pfad
-        let participantType = participantPath.split("network.")[1].split("#")[0];
-        let participantId = participantPath.split("network.")[1].split("#")[1];
+        let spinner = $('#spinner');
+        spinner.removeClass('hidden');
 
-        // Speichere Infos im Session Storage
-        sessionStorage.setItem("participantType", participantType);
-        sessionStorage.setItem("participantId", participantId);
+        if (loggedIn) {
+            // Ping Aufruf, um als Antwort den aufrufenden Participant zu erhalten
+            const response = await fetch(serverIp + "/api/system/ping", {
+                method: 'GET',
+                credentials: 'include'
+            });
+            let participantJson = await response.json();
+            let participantPath = participantJson.participant;
 
-        // Leite den Nutzer auf die entsprechende Seite weiter
-        if (participantType == 'Patient') {
-            window.location.href = "patient/profil.html";
-        } else if (participantType == 'Employee') {
-            window.location.href = "mitarbeiter/profil.html";
-        } else if (participantType == 'Doctor') {
-            window.location.href = "doktor/profil.html";
+            // Hole Typ und Id des Participants aus dem gesamten Pfad
+            let participantType = participantPath.split("network.")[1].split("#")[0];
+            let participantId = participantPath.split("network.")[1].split("#")[1];
+
+            // Speichere Infos im Session Storage
+            sessionStorage.setItem("participantType", participantType);
+            sessionStorage.setItem("participantId", participantId);
+
+            // Leite den Nutzer auf die entsprechende Seite weiter
+            if (participantType == 'Patient') {
+                window.location.href = "patient/profil.html";
+            } else if (participantType == 'Employee') {
+                window.location.href = "mitarbeiter/profil.html";
+            } else if (participantType == 'Doctor') {
+                window.location.href = "doktor/profil.html";
+            }
         }
     });
 </script>
