--- a/oshealthrec-website/public/index.html
+++ b/oshealthrec-website/public/index.html
@@ -64,7 +64,7 @@
                 method: 'GET',
                 credentials: 'include'
             }).catch(function (error) {
-                // console.log(error());
+                window.location.href = "index.html";
             });
             let participantJson = await response.json();
             let participantPath = participantJson.participant;
