Anzeige der Intolerances angepasst

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -173,7 +173,7 @@
         let reportTabelle = $('#reportTabelle');
 
         let intolerancesString = "";
-        let firstIntolerance = true;
+        let firstIntolerance = new Boolean(true);
         patient.intolerances.forEach(function (intolerance) {
             if (firstIntolerance != true) {
                 intolerancesString += ", ";
