--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -172,6 +172,8 @@
         let notfallkontakt = $('#notfallkontakt');
         let reportTabelle = $('#reportTabelle');
 
+        console.log(patient.intolerances);
+
         let intolerancesString = "";
         let firstIntolerance = new Boolean(true);
         patient.intolerances.forEach(function (intolerance) {
