--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -56,14 +56,14 @@
         </div>
         <div class="col-sm-3">
             <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block"
+                <button type="button" class="btn btn-primary freigaben-button"
                         onclick="window.location.href='/patient/arzt-suche.html'">Arzt suchen
                 </button>
             </form>
         </div>
         <div class="col-sm-3">
             <form class="form-group">
-                <button type="button" class="btn btn-primary btn-block"
+                <button type="button" class="btn btn-primary freigaben-button"
                         onclick="window.location.href='/patient/scan-qr.html'">Freigabescan
                 </button>
             </form>
