Auflistung der Intolerances angepasst

--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -172,6 +172,7 @@
         let notfallkontakt = $('#notfallkontakt');
         let reportTabelle = $('#reportTabelle');
 
+        // Auflisten der einzelnen Intolerances in einem String
         let intolerancesString = "";
         let firstIntolerance = true;
         patient.intolerances.forEach(function (intolerance) {
