--- a/oshealthrec-website/public/doktor/qr-generator.html
+++ b/oshealthrec-website/public/doktor/qr-generator.html
@@ -36,7 +36,7 @@
                 <a class="nav-link" href="qr-generator.html">QR-Code Generieren</a>
             </li>
         </ul>
-        <button type="button" class="btn btn-secondary btn-sm ml-5">
+        <button type="button" class="btn btn-secondary btn-sm ml-5" onclick="logout()">
             Log out
         </button>
     </div>
