Anzeige des Profils angepasst

--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -126,7 +126,7 @@
         // Auflisten der einzelnen Intolerances in einem String
         let intolerancesString = "";
         let firstIntolerance = true;
-        patient.intolerances.forEach(function (intolerance) {
+        patientProfil.intolerances.forEach(function (intolerance) {
             if (!firstIntolerance) {
                 intolerancesString += ", ";
             }
