--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -120,6 +120,7 @@
 
         if (response.status != 200) {
             alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
         }
 
         // Hole Textfelder als jquery Variable
