--- a/oshealthrec-website/public/patient/profil.html
+++ b/oshealthrec-website/public/patient/profil.html
@@ -121,6 +121,7 @@
         if (response.status != 200) {
             alertDiv.removeClass('hidden');
             spinner.addClass('hidden');
+            console.log(response);
         }
 
         // Hole Textfelder als jquery Variable
