Alert bei Fehler eingefügt

--- a/oshealthrec-website/public/patient/arzt-suche.html
+++ b/oshealthrec-website/public/patient/arzt-suche.html
@@ -41,6 +41,9 @@
 </nav>
 
 <div class="container-fluid">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="text-center">
@@ -104,6 +107,9 @@
         let participantId = sessionStorage.getItem("participantId");
         let participantType = sessionStorage.getItem("participantType");
 
+        let spinner = $('#spinner');
+        let alertDiv = $('#alert');
+
         // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Patienten handelt
         if (participantType != "Patient") {
             window.location.href = "../index.html";
@@ -119,6 +125,13 @@
         });
         const doctorArray = await response.json();
 
+        if (response.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(response);
+        }
+
+
         // Gebe Informationen von allen Doktoren aus
         doctorArray.forEach(function (doctor) {
             let appendString = "<tr>" +
@@ -131,7 +144,7 @@
             arztTabelle.append(appendString);
         });
 
-        let spinner = $('#spinner');
+
         spinner.addClass('hidden');
     });
 </script>
