--- a/oshealthrec-website/public/patient/freigaben.html
+++ b/oshealthrec-website/public/patient/freigaben.html
@@ -160,7 +160,7 @@
             if (doctorResponse.status != 200) {
                 alertDiv.removeClass('hidden');
                 spinner.addClass('hidden');
-                console.log(response);
+                console.log(doctorResponse);
             }
 
             // Gebe Informationen des Doktors aus
@@ -203,7 +203,7 @@
             if (doctorResponse.status != 200) {
                 alertDiv.removeClass('hidden');
                 spinner.addClass('hidden');
-                console.log(response);
+                console.log(doctorResponse);
             }
 
             // Gebe Daten für alle Ärzte aus
