--- a/oshealthrec-website/public/patient/scan-qr.html
+++ b/oshealthrec-website/public/patient/scan-qr.html
@@ -55,6 +55,9 @@
 </nav>
 
 <div class="container-fluid">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="text-center">
