--- a/oshealthrec-website/public/doktor/hochladen.html
+++ b/oshealthrec-website/public/doktor/hochladen.html
@@ -42,6 +42,9 @@
 </nav>
 
 <div class="container">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-sm-12">
             <h3>Dokument hochladen</h3>
