--- a/oshealthrec-website/public/doktor/patient.html
+++ b/oshealthrec-website/public/doktor/patient.html
@@ -44,6 +44,9 @@
 </nav>
 
 <div class="container-fluid">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="text-center">
@@ -149,6 +152,9 @@
         let patientProfileArrayJSON = sessionStorage.getItem("patientProfileArray");
         let patientProfileArray = JSON.parse(patientProfileArrayJSON);
 
+        let spinner = $('#spinner');
+        let alertDiv = $('#alert');
+
         // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Arzt handelt
         if (participantType != "Doctor") {
             window.location.href = "../index.html";
@@ -199,12 +205,24 @@
         });
         const doctorArray = await doctorResponse.json();
 
+        if (doctorResponse.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(doctorResponse);
+        }
+
         // Rest Aufruf um alle Mitarbeiter zu erhalten
         const employeeResponse = await fetch(serverIp + "/api/org.oshealthrec.network.Employee", {
             method: 'GET',
             credentials: 'include'
         });
         const employeeArray = await employeeResponse.json();
+
+        if (employeeResponse.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(employeeResponse);
+        }
 
         // Erstelle Filter um nur die Reports des ausgewählten Patienten anzuzueigen
         let patientPath = "org.oshealthrec.network.Patient";
@@ -216,6 +234,12 @@
             credentials: 'include'
         });
         let reportArray = await response.json();
+
+        if (response.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(response);
+        }
 
         // Gebe Daten für alle Reports aus
         reportArray.forEach(function (report) {
@@ -251,7 +275,6 @@
             reportTabelle.append(appendString);
         });
 
-        let spinner = $('#spinner');
         spinner.addClass('hidden');
     });
 </script>
