--- a/oshealthrec-website/public/doktor/profil.html
+++ b/oshealthrec-website/public/doktor/profil.html
@@ -44,6 +44,9 @@
 </nav>
 
 <div class="container">
+    <div class="alert alert-danger hidden" role="alert" id="alert">
+        Ein Fehler ist aufgetreten. Bitte laden Sie die Seite erneut!
+    </div>
     <div class="row">
         <div class="col-12">
             <div class="text-center">
@@ -98,6 +101,9 @@
         let participantId = sessionStorage.getItem("participantId");
         let participantType = sessionStorage.getItem("participantType");
 
+        let spinner = $('#spinner');
+        let alertDiv = $('#alert');
+
         // Leite Nutzer zurück auf die Startseite, wenn es sich nicht um einen Arzt handelt
         if (participantType != "Doctor") {
             window.location.href = "../index.html";
@@ -109,6 +115,12 @@
             credentials: 'include'
         });
         let doktorProfil = await response.json();
+
+        if (response.status != 200) {
+            alertDiv.removeClass('hidden');
+            spinner.addClass('hidden');
+            console.log(response);
+        }
 
         // Hole Textfelder als jquery Variable
         let vorname = $('#vorname');
@@ -128,7 +140,7 @@
             + doktorProfil.zipcode + " " + doktorProfil.city + "<br />"
             + doktorProfil.country);
 
-        let spinner = $('#spinner');
+
         spinner.addClass('hidden');
     });
 </script>
